# skymakercam

./: CHANGELOG.rst  README.md  pyproject.toml
.github/workflows/: release.yml
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
python/cluplus/: configloader.py  proxy.py
python/lvmagp/: __main__.py
python/lvmagp/actor/: actor.py
python/lvmagp/actor/command/: __init__.py  status.py
python/proto/: __main__.py
python/proto/actor/: __init__.py  actor.py  exceptions.py
python/proto/actor/commands/: __init__.py  commands.py  complex_data_with_jsonpickle.py  erronous.py
python/proto/etc/: proto.yml
python/skymakercam/: __init__.py  __main__.py  camera.py  camera2.py  client.py  coords.py  exceptions.py  focus_stage.py  proxy.py  pwi.py  starimage.py  xy_stage.py
python/skymakercam/actor/: base_client.py  pwi.py  trajectory.py  x_stage.py  xy_stage.py
python/skymakercam/etc/: cameras.yaml
python/skymakercam/misc/: example_08_synthetic_images_remote.py  lvmguiding.py  sep-simple.py  sep.py
python/skymakercam/params/: lvm_agc_cam.py  lvm_common.py
tests/: test_00_misc.py  test_main.py
utils/: asyncudp_simple.py  asyncudp_simple_client.py  asyncudp_simple_server.py  client_test.py  dancer.py  focus_stage_test1.py  keyreader.py  maplot_asyncio.py  plot_skymakercam.py  plotit.py  plotloop.py  proxy_pwi_test.py  proxy_tan_test.py  proxy_test.py  pwi_test1.py  sep-simple.py  test_fsm_guider.py  test_proxy_pwi.py  test_proxy_pwi_invoke.py  test_proxy_tan.py  xy_test1.py
utils/misc/: example_08_synthetic_images_remote.py  sep_synthetic_images_remote.py
